Refactored and fixed lighting engine Added rgb light for block light emission Created data snapshots for GameCameraSnapshot and LightSnapshot Renamed TileEntityType to TileEntity because it extends Block and not BlockType